[gd_scene load_steps=20 format=2]

[ext_resource path="res://scr/userinterface/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/mob4.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/mob3.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/mob1.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/mob2.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/boss1.png" type="Texture" id=6]
[ext_resource path="res://assets/roundshadow.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/starthover.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/start.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/quit.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/quithover.png" type="Texture" id=11]

[sub_resource type="Shader" id=1]
code = "/* 
Original shader from Fubucci â€“ https://www.febucci.com/2019/05/fire-shader/ 
Converted to Godot Shader Language by Godot Shaders - godotshaders.com/shader/2D-fire/
*/

shader_type canvas_item;

uniform sampler2D noise_tex;
uniform sampler2D gradient_tex;

uniform vec4 brighter_color : hint_color = vec4(1.0, 0.8, 0.0, 1.0);
uniform vec4 middle_color : hint_color  = vec4(1.0, 0.56, 0.0, 1.0);
uniform vec4 darker_color : hint_color  = vec4(0.64, 0.2, 0.05, 1.0);

uniform float spread : hint_range(0.0, 1.0) = 0.5;

void fragment()
{
	
	float noise_value = texture(noise_tex, UV + vec2(0.0, TIME)).x;
	// The .yx swizzle is when using the built in horizontal gradient texture. If you have a vertical gradient texture remove .yx
	float gradient_value = texture(gradient_tex, UV.yx).x;
	
	gradient_value -= smoothstep(spread, spread + 0.5, length(UV + vec2(-0.5, -0.5)) / spread);
	
	float step1 = step(noise_value, gradient_value);
	float step2 = step(noise_value, gradient_value - 0.2);
	float step3 = step(noise_value, gradient_value - 0.4);
	
	vec3 bd_color = mix(brighter_color.rgb, darker_color.rgb, step1 - step2);
	
	vec4 color = vec4(bd_color, step1);
	color.rgb = mix(color.rgb, middle_color.rgb, step2 - step3);
	
	COLOR = color;
}"

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.743802 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="OpenSimplexNoise" id=4]

[sub_resource type="NoiseTexture" id=5]
flags = 3
width = 1024
height = 1024
seamless = true
noise = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 1 )
shader_param/brighter_color = Color( 1, 0.8, 0, 1 )
shader_param/middle_color = Color( 1, 0.56, 0, 1 )
shader_param/darker_color = Color( 0.64, 0.2, 0.05, 1 )
shader_param/spread = 0.529
shader_param/noise_tex = SubResource( 5 )
shader_param/gradient_tex = SubResource( 3 )

[sub_resource type="Animation" id=7]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Environment" id=8]
background_mode = 4
ss_reflections_depth_tolerance = 12.6
ssao_intensity = 84.56
ssao_radius2 = 10.48
dof_blur_far_distance = 13.28
dof_blur_far_transition = 1.77
dof_blur_far_amount = 0.76
dof_blur_near_distance = 1.46
dof_blur_near_quality = 2
glow_enabled = true
glow_intensity = 2.61
glow_strength = 0.96
glow_bloom = 0.04
glow_blend_mode = 0
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_brightness = 0.55
adjustment_contrast = 1.27
adjustment_saturation = 1.28

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Panel"]
position = Vector2( 512, 878.238 )
scale = Vector2( 2.92, 2.88 )
texture = ExtResource( 7 )
texture_scale = 2.0
energy = 0.6
range_layer_min = -1
range_layer_max = 1
shadow_color = Color( 0, 0, 0, 1 )
shadow_gradient_length = 63.5
shadow_filter = 1

[node name="Node2D" type="Node2D" parent="Panel"]
modulate = Color( 0.694118, 0.635294, 0.00392157, 1 )
position = Vector2( 138.591, -37.7977 )
rotation = 0.114773

[node name="mob4" type="Sprite" parent="Panel/Node2D"]
position = Vector2( 473.262, 895.793 )
rotation = -0.243614
scale = Vector2( 6.56, 6.56 )
texture = ExtResource( 2 )
normal_map = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="mob2" type="Sprite" parent="Panel/Node2D"]
position = Vector2( 94.1057, 908.701 )
rotation = -1.98509
scale = Vector2( 6.56, 6.56 )
texture = ExtResource( 5 )
normal_map = ExtResource( 5 )

[node name="mob1" type="Sprite" parent="Panel/Node2D"]
position = Vector2( 840.249, 781.453 )
rotation = 0.225396
scale = Vector2( 6.56, 6.56 )
texture = ExtResource( 4 )
normal_map = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 64, 64, 64 )

[node name="mob3" type="Sprite" parent="Panel/Node2D"]
light_mask = -2147483647
position = Vector2( 832.306, 461.251 )
rotation = 0.00667818
scale = Vector2( 6.56, 6.56 )
texture = ExtResource( 3 )
normal_map = ExtResource( 3 )

[node name="boss1" type="Sprite" parent="Panel/Node2D"]
position = Vector2( 222.075, -124.124 )
rotation = -0.358387
scale = Vector2( 6.56, 6.56 )
texture = ExtResource( 6 )
normal_map = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -5.40955
margin_right = 48.0
margin_bottom = 62.5905
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="Panel/VBoxContainer"]
light_mask = 0
margin_right = 96.0
margin_bottom = 32.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 36.0
margin_right = 96.0
margin_bottom = 68.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 11 )

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -43.0928
margin_right = 99.0
margin_bottom = 157.907
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BULLET HELL PROTOTYPE







WASD - MOVE
SpaceBar - CHARGE
Mouse 1 - SHOOT
Mouse 2 - SPECIAL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
anims/fadeout = SubResource( 7 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="Panel"]
environment = SubResource( 8 )

[connection signal="button_up" from="Panel/VBoxContainer/PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/QuitButton" to="." method="_on_QuitButton_button_up"]
